k8s/deployment-debmirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: debmirror-nginx
  name: debmirror-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debmirror-nginx
  template:
    metadata:
      labels:
        app: debmirror-nginx
    spec:
      volumes:
      - name: local-packages
        persistentVolumeClaim:
          claimName: local-packages-pvc
      - name: nginx-index-html
        configMap:
          name: packages-index-html
      - name: nginx-default-conf
        configMap:
          name: nginx-default-conf
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: local-packages
          mountPath: /mirrors
          readOnly: true
        - name: nginx-default-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx-default.conf
        - name: nginx-index-html
          mountPath: /index.html
          subPath: index.html
      priorityClassName: debmirror-high-priority
