k8s/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: packages-service
spec:
  selector:
    app: debmirror-nginx
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: packages-ingress
spec:
  tls:
    - hosts:
      - packages.home.orangesquash.org.uk
      secretName: packages-tls
  rules:
  - host: packages.home.orangesquash.org.uk
    http:
      paths:
      - backend:
          service:
            name: packages-service
            port:
              number: 80
        path: /
        pathType: Prefix
